<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
    <TextView android:layout_width="wrap_content"
              android:layout_height="match_parent"
              android:layout_weight="8"
              android:textSize="18sp"
              android:layout_margin="4dp"
              android:text="@string/reponame"/>
    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="match_parent"
                  android:layout_weight="1"
                  android:layout_margin="4dp"
                  android:orientation="vertical">
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textSize="18sp"
                  android:text="@string/_2_forks"/>
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textSize="18sp"
                  android:text="@string/_5_stars"/>
    </LinearLayout>

</LinearLayout>