<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                       xmlns:app="http://schemas.android.com/apk/res-auto"
                                       xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                       android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                       android:layout_height="match_parent">

        <TextView
                android:text="@string/this_is_their_biography_it_may_be_long_and_needs_to_all_fit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/biography"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"/>
        <SearchView
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:id="@+id/profile_search"
                android:background="@drawable/border"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/biography"/>
        <include layout="@layout/no_network_response" android:id="@+id/no_network_response_profile"
                 android:layout_height="100dp" android:layout_width="match_parent"
                 android:visibility="invisible"
                 app:layout_constraintBottom_toBottomOf="@+id/recyclerView_profile"
                 app:layout_constraintTop_toTopOf="@+id/recyclerView_profile"
                 app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                 app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>

        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/recyclerView_profile"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/profile_search"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" />
        <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:srcCompat="@mipmap/ic_launcher_round"
                android:id="@+id/user_avatar_profile"
                app:layout_constraintStart_toStartOf="parent"
                android:scaleType="fitCenter"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toTopOf="@+id/biography"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toEndOf="@+id/user_avatar_profile"
                android:layout_marginStart="24dp"
                android:id="@+id/linearLayout"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent">
            <TextView
                    android:text="@string/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:id="@+id/username"/>
            <TextView
                    android:text="@string/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:id="@+id/email"/>
            <TextView
                    android:text="@string/location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:id="@+id/location"/>
            <TextView
                    android:text="@string/join_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:id="@+id/join_date"/>
            <TextView
                    android:text="@string/followers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:id="@+id/followers"/>
            <TextView
                    android:text="@string/following"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:id="@+id/following"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>